--- a/src/templates/post_update.hbs
+++ b/src/templates/post_update.hbs
@@ -12,7 +12,7 @@
 			text-align: center; color: #2c3e50; } .greeting { font-size: 18px;
 			margin-bottom: 15px; } .content { font-size: 16px; line-height: 1.6;
 			color: #4a4a4a; margin-bottom: 20px; } .btn { display: inline-block;
-			padding: 10px 15px; background-color: #2c3e50; color: #fff;
+			padding: 10px 15px; background-color: #B08968; color: #fff;
 			text-decoration: none; border-radius: 5px; text-align: center;
 			font-weight: bold; margin: 20px auto; display: block; } .footer {
 			font-size: 14px; color: #888; text-align: center; margin-top: 30px; }
