--- a/src/templates/reset_pwd.hbs
+++ b/src/templates/reset_pwd.hbs
@@ -12,7 +12,7 @@
 			.header { font-size: 24px; font-weight: bold; margin-bottom: 10px;
 			text-align: center; color: #2c3e50; } .content { font-size: 16px;
 			line-height: 1.6; color: #4a4a4a; margin: 15px 0; } .btn { display:
-			inline-block; padding: 10px 15px; background-color: #2c3e50; color: #fff;
+			inline-block; padding: 10px 15px; background-color: #B08968; color: #fff;
 			text-decoration: none; border-radius: 5px; font-weight: bold; text-align:
 			center; margin: 20px auto; display: block; } .footer { font-size: 14px;
 			color: #888; text-align: center; margin-top: 30px; }
